# WEB-CAD

./: .dev-ref  .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  build-kern.bat  bunfig.toml  marketplace.json  package.json  plugin.json  requirements-capability.txt  tsconfig.json  vercel.json
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy-pages.yml
.husky/: pre-commit
data/: dsl-demo-corpus.jsonl  eval.jsonl  eval_kaggle.jsonl  eval_v2.jsonl  schultz-target.jsonl  train.jsonl  train_v2.jsonl  v2-synthetic.jsonl
data/kaggle-eval-bench/: PROVENANCE.md
dataset/: v2-results.md  v2-spec.md
docs/: ORIGIN.md  ai-pipeline.md  audit-419-system-prompt-parity.md  avir-cli-transplant-plan.md  brep-nurbs-canonical-migration-audit.md  c2-schema-handler-audit.md  canonical-demo-acceptance-criteria.md  canonical-leftside-palette-architecture.md  canonical-openings-fzk-haus.md  canonical-roof-fzk-haus.md  closed-loop-cad-test-report.md  console-dsl.md  engine-audit-e2b-vs-e4b.md  engine-audit-mtp.md  external-references.md  extraction-pipeline.md  github-flow.md  grasshopper-skills-tab-design.md  kern-architecture.md  kern-parity-gate.md  kern-parity-report.md  kern-ssi-algorithm.md  multimodal-sketch-to-3d-audit.md  palette-coverage-audit.md  plan-18-day.md  research-revit-auto-cut.md  rhino-mcp-reference.md  s323-surface-creation.md  sample-prompts.md  shared-browser.md  spike-a-retrospective.md  spike-b-retrospective.md  surface-categorization-1572.md  test-coordination.md  tier1-conventions.md  tool-taxonomy.md  training-pair-format.md  web-src-organization.md  webcad-agent.md
docs/archive/: spike-a-retrospective.md  v2-results.md
docs/dev/: add-a-handler.md  add-a-palette-tool.md  architecture.md
docs/internal/: agent-palette-parity.md  cad-blocks-source.md  decoder-anatomy.md  decoder-dual-head-export.md  failure-classes.md  layout-clipping-plane-interaction.md  per-tab-chat-architecture.md  research-tab-design.md  secrets-scanning.md  sheet-template-auto-cut.md  verify-discipline.md  working-tree-discipline.md
docs/qa/: full-smoke-screenplay.md
docs/research/: gemma-4-web-variants.md
docs/runbooks/: bonsai-validation.md
docs/user/: getting-started.md  sample-prompts.md  troubleshooting.md
fixtures/: mined-extra.jsonl  spike-b-all.jsonl  spike-b-bonsai-project0-openings.jsonl  spike-b-bonsai-project0-walls.jsonl  spike-b-ifc2x3-col.jsonl  spike-b-linked-aggregates.jsonl  spike-b-wall.jsonl  tier1-extra.jsonl  tier1.jsonl  tier2-curated.jsonl
kern/: boolean.cpp  boolean.h  brep.cpp  brep.h  chamfer.cpp  chamfer.h  fillet.cpp  fillet.h  loft.cpp  loft.h  module.cpp  ssi.cpp  ssi.h
scripts/: 1627-cohort.mjs  anchor-history-trim-281.mjs  anchor-sdmove-transform.mjs  anchor-sdquery.mjs  anchor-sdrotate-transform.mjs  anchor-sdscale-transform.mjs  audit-aliases.ts  audit-brace-balance.mjs  audit-brep-canonical-readiness.ts  audit-dispatch-routing.ts  audit-no-gemma3-or-26b.sh  audit-stubs.ts  audit-undo-coverage.ts  audit-vite-spawn.mjs  audit-zip-parity.ts  baseline-tps.mjs  bonsai-validate.ts  brep-gate.ts  build-ai-cache.ts  capability-bench.ts  capture-parity-reference.mjs  cdp-verify-168b.py  cdp-verify-168c.py  cdp.ts  clear-cache.mjs  closed-loop-cad.ts  cold-cache-first-visit.mjs  collect-diag-307.mjs  colocation-map.json  decode-blobs.py  demo-drive.mjs  demo-prompt-harness.ts  demo-record.mjs  demo-test-twostory.mjs  dev-as-architect.ts  dump-decoder-kv-shapes.mjs  e2e-chain-proof.mjs  enable-auto-merge.sh  eval-kaggle-bench.py  eval-schultz.py  (+100 more)
scripts/corpus-mine/: extract.mjs  fetch.mjs  run.mjs  sources.mjs  translate.mjs
scripts/qa/: diff-ifc.ts  extract-schultz-parameters.ts  voxel-iou.ts
scripts/shared-browser/: start.ps1  stop.ps1
space-deploy/: Dockerfile  README.md  nginx.conf  push-to-hf.sh
src/extract/: emit-sequence.ts  nl-template.ts  walk-representation.ts
src/generate/: execute.ts  format.ts  rng.ts  synth.ts  validate.ts
src/serve/: serve_base.py  serve_lora.py  serve_mtp.py
src/tools/: tier1.ts
src/train/: build_dataset.py  build_dataset_v2.py  inference_eval.py  inference_eval_v2.py  lora_train_v2.py  pipeline_v2.sh  publish_v2.py
state/: baseline-tps-2026-05-25.json  gemma-verify-18f68c0-20260505T222920Z.json  gemma-verify-56f2ea9-20260505T233644Z.json  gemma-verify-6ee9f65-20260506T003000Z.json  gemma-verify-704548b-20260505T195800Z.json  gemma-verify-8fd731f-20260505T235528Z.json  gemma-verify-992c913-20260505T134905Z.json  gemma-verify-fdf180a-20260506T001108Z.json  surface-allowfail.txt  surface-cleanup-2026-05-20.md
submission/: README.md  SAMPLES.md  demo-script.md  fresh-device-e2e.md  impact.md  repro.md  writeup.md
submission/screenshots/: README.md
tools/mcp/: agent-capability-corpus.json  agent-capability-harness.mjs  slot-smoke-test.mjs  webcad-mcp.mjs
web/: .env.production  bunfig.toml  index.html  kern.js  kern.wasm  tsconfig.json  vite.config.ts
web/public/: ai-cache.json  coi-serviceworker.js  kern.js  kern.wasm  wasm-llama.js  wasm-llama.wasm
web/research-corpus/: building-codes-101.md  daylight-calc.md  gable-roof.md  ifc4-schema-basics.md  wall-thickness.md
web/skills/: skills.schema.json
web/src/: AGENTS.md  README.md  agent-harness.ts  ai-generate.ts  app-state.ts  bonsai-client.ts  chat-dispatch-routing.ts  chat-dispatch-summary.ts  chat-panel.ts  cmdk.ts  create-mode.ts  datums.ts  demo-prompts.ts  dictionary.ts  dispatch.ts  dom-events.ts  drafting.ts  dsl-eval.ts  export-drawer.ts  grids.ts  history.ts  icons.ts  ifc-build.ts  ifc-nurbs.ts  ifc-types.ts  ifc.ts  image-to-ifc-agent.ts  kernel.ts  layers.ts  layout.ts  levels.ts  loader.ts  main.ts  modes.ts  nurbs-curve-algorithms.ts  nurbs-curves.ts  nurbs-kernel.LICENSE.md  nurbs-kernel.ts  nurbs-surface-algorithms.ts  palette.ts  (+31 more)
web/test/: agent-harness-error-wording.test.ts  agent-harness-mtp.test.ts  agent-harness-multimodal.test.ts  agent-harness.test.ts  agent-instance.test.ts  area.test.ts  (+146 more)
(+301 files in other folders)
